--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -149,3 +149,65 @@ header {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
+
+/* Main section */
+
+main {
+  font-family: 'Lato',sans-serif;
+  .cards-section {
+    padding: 150px 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 150px;
+    justify-items: center;
+    
+    .card {
+      width: 400px;
+      display: flex;
+      flex-direction: column;
+
+    .card-images {
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    }
+
+    .content {
+      border: 1px solid black;
+      border-top: none;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+
+      .name-div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .number-of-likes {
+        margin-left: auto;
+        margin-top: -20px;
+        margin-bottom: 20px;
+      }
+
+      .comment {
+        margin-top: 20px;
+        padding: 10px;
+        font-size: 1.2rem;
+        border-radius: 5px;
+
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+
+    }
+   }
+  }
+}
