--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -157,7 +157,7 @@ main {
   .cards-section {
     padding: 150px 0;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, minmax(400px, 1fr));
     row-gap: 150px;
     justify-items: center;
     
@@ -168,7 +168,7 @@ main {
 
     .card-images {
       width: 100%;
-      height: 400px;
+      // height: 400px;
       object-fit: cover;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
@@ -205,8 +205,6 @@ main {
           cursor: pointer;
         }
       }
-
-
     }
    }
   }
