--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -174,21 +174,25 @@ b-content {
 
 /* Main section */
 main {
+  background: url("../assets/images/2.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom right;
   font-family: 'Lato',sans-serif;
 }
 
 main .cards-section {
-  padding: 150px 0;
+  padding: 150px 50px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: (minmax(400px, 1fr))[3];
+      grid-template-columns: repeat(3, minmax(400px, 1fr));
   row-gap: 150px;
   justify-items: center;
 }
 
 main .cards-section .card {
-  width: 400px;
+  width: 65%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -200,7 +204,6 @@ main .cards-section .card {
 
 main .cards-section .card .card-images {
   width: 100%;
-  height: 400px;
   -o-object-fit: cover;
      object-fit: cover;
   border-top-left-radius: 10px;
@@ -208,7 +211,6 @@ main .cards-section .card .card-images {
 }
 
 main .cards-section .card .content {
-  border: 1px solid black;
   border-top: none;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -220,6 +222,13 @@ main .cards-section .card .content {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 330px;
+  font-size: 1.1rem;
+  background: -webkit-gradient(linear, left top, left bottom, from(#01041b), color-stop(60%, #0c574d), color-stop(#37948f), to(#b7e0df));
+  background: linear-gradient(#01041b 0%, #0c574d 60%, #37948f, #b7e0df);
 }
 
 main .cards-section .card .content .name-div {
@@ -229,22 +238,52 @@ main .cards-section .card .content .name-div {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+main .cards-section .card .content .name-div h2 {
+  width: 80%;
+  color: #f0f3f2;
+}
+
+main .cards-section .card .content .name-div span {
+  color: #f0f3f2;
+}
+
+main .cards-section .card .content .name-div span i:hover {
+  cursor: pointer;
+}
+
+main .cards-section .card .content .likes {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 10px;
 }
 
-main .cards-section .card .content .number-of-likes {
-  margin-left: auto;
-  margin-top: -20px;
-  margin-bottom: 20px;
+main .cards-section .card .content .description {
+  color: #e1e6e4;
 }
 
 main .cards-section .card .content .comment {
-  margin-top: 20px;
   padding: 10px;
   font-size: 1.2rem;
   border-radius: 5px;
+  border: none;
+  background: transparent;
+  -webkit-box-shadow: 0 8px 12px #37948f;
+          box-shadow: 0 8px 12px #37948f;
+  color: #ffffff;
+  font-weight: 900;
 }
 
 main .cards-section .card .content .comment:hover {
