--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -153,53 +153,87 @@ header {
 /* Main section */
 
 main {
+
+  background: url("../assets/images/2.svg");
+  background-repeat:no-repeat;
+  background-size: cover;
+  background-position: bottom right;
+  
+ 
   font-family: 'Lato',sans-serif;
   .cards-section {
-    padding: 150px 0;
+    padding: 150px 50px;
     display: grid;
     grid-template-columns: repeat(3, minmax(400px, 1fr));
     row-gap: 150px;
     justify-items: center;
     
     .card {
-      width: 400px;
+      width: 65%;
       display: flex;
       flex-direction: column;
+      
 
     .card-images {
       width: 100%;
-      // height: 400px;
       object-fit: cover;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
     }
 
     .content {
-      border: 1px solid black;
+      
       border-top: none;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
       padding: 20px;
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
+      height: 330px;
+      font-size: 1.1rem;
+      background: linear-gradient(rgb(1, 4, 27) 0%, rgb(12, 87, 77) 60%, rgb(55, 148, 143) , rgb(183, 224, 223));
+      
 
       .name-div {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: baseline;
+        
+        h2 {
+          width: 80%;
+          color: #f0f3f2;
+        }
+
+        span {
+          color: #f0f3f2;
+
+          i:hover {
+            cursor: pointer;
+          }
+        }
       }
 
-      .number-of-likes {
-        margin-left: auto;
-        margin-top: -20px;
-        margin-bottom: 20px;
+      .likes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .description {
+        color: rgb(225, 230, 228);
       }
 
       .comment {
-        margin-top: 20px;
         padding: 10px;
         font-size: 1.2rem;
         border-radius: 5px;
+        border: none;
+        background: transparent;
+        box-shadow: 0 8px 12px rgb(55, 148, 143);
+        color: #ffffff;
+        font-weight: 900;
 
         &:hover {
           cursor: pointer;
