--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -14,10 +14,10 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   overflow-x: hidden;
+  font-family: 'Leto', sans-serif;
 }
 
 header {
-  font-family: 'Leto', sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -26,7 +26,14 @@ header {
           justify-content: center;
 }
 
-.menu-bar {
+h1 {
+  color: #fff;
+  font-size: 2.5rem;
+  position: absolute;
+  left: 100px;
+}
+
+.menu-bar, h1 {
   border-radius: 25px;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -44,10 +51,11 @@ header {
   margin: 50px 0 0 0;
 }
 
-.menu-bar li {
+.menu-bar li, h1 li {
   list-style: none;
   color: white;
   font-family: sans-serif;
+  font-size: 1.2rem;
   font-weight: bold;
   padding: 12px 16px;
   margin: 0 8px;
@@ -56,7 +64,7 @@ header {
   white-space: nowrap;
 }
 
-.menu-bar li::before {
+.menu-bar li::before, h1 li::before {
   content: " ";
   position: absolute;
   top: 0;
@@ -69,11 +77,11 @@ header {
   border-radius: 25px;
 }
 
-.menu-bar li:hover {
+.menu-bar li:hover, h1 li:hover {
   color: black;
 }
 
-.menu-bar li:hover::before {
+.menu-bar li:hover::before, h1 li:hover::before {
   background: -webkit-gradient(linear, left top, left bottom, from(#e8edec), to(#d2d1d3));
   background: linear-gradient(to bottom, #e8edec, #d2d1d3);
   -webkit-box-shadow: 0px 3px 20px 0px black;
@@ -174,11 +182,7 @@ b-content {
 
 /* Main section */
 main {
-  background: url("../assets/images/2.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom right;
-  font-family: 'Lato',sans-serif;
+  background: url("../assets/images/Circuit Board (1).svg");
 }
 
 main .cards-section {
@@ -227,8 +231,8 @@ main .cards-section .card .content {
           justify-content: space-between;
   height: 330px;
   font-size: 1.1rem;
-  background: -webkit-gradient(linear, left top, left bottom, from(#01041b), color-stop(60%, #19776a), color-stop(#61aaa6), to(#b7e0df));
-  background: linear-gradient(#01041b 0%, #19776a 60%, #61aaa6, #b7e0df);
+  background: -webkit-gradient(linear, left top, left bottom, from(#001111), color-stop(60%, #19776a), color-stop(#61aaa6), to(#b7e0df));
+  background: linear-gradient(#001111 0%, #19776a 60%, #61aaa6, #b7e0df);
 }
 
 main .cards-section .card .content .name-div {
@@ -291,5 +295,18 @@ main .cards-section .card .content .comment:hover {
   color: #012935;
   -webkit-box-shadow: 0 0 10px #afe9e5;
           box-shadow: 0 0 10px #afe9e5;
+}
+
+footer {
+  font-size: 1.5rem;
+  font-weight: 900;
+  color: #d2d1d3;
+  padding: 20px 100px;
+  background: #262c2a;
+}
+
+footer a {
+  text-decoration: none;
+  color: #37948f;
 }
 /*# sourceMappingURL=style.css.map */
