--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -267,10 +267,107 @@ footer {
 .popup {
   width: 85vw;
   height: 90vh;
-  padding: 1.8rem 1.2rem 1rem 1.2rem;
-  background-color: #f3f1f1;
+  padding: 30px 50px;
+  background-color: #2e3130;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  border-radius: 20px;
+  overflow-y: scroll;
+  color: #d2d1d3;
+
+  .exit {
+    background: transparent;
+    border: none;
+    align-self: flex-end;
+    font-size: 2rem;
+    color: #d2d1d3;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  img {
+    width: 80%;
+    border-radius: 20px;
+  }
+
+  h2 {
+    font-size: 2.8rem;
+  }
+
+  p {
+    font-size: 1.5rem;
+
+  }
+
+  h3 {
+    font-size: 1.6rem;
+  }
+
+  ul > li {
+    list-style: none;
+    font-style: italic;
+    font-size: 1.2rem;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 50%;
+
+    h4 {
+      font-size: 1.5rem;
+    }
+
+    input[type="text"], textarea {
+      width: 100%;
+      font-size: 1.2rem;
+      padding: 10px;
+      border-radius: 10px;
+      border: none;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    textarea {
+      height: 150px;
+    }
+
+    input[type="button"] {
+      align-self: flex-start;
+      font-size: 1.3rem;
+      font-weight: 900;
+      border: none;
+      padding: 10px;
+      border-radius: 8px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.blur {
+  filter: blur(5px);
+}
+
+
+
+
