--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,15 +14,25 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   overflow-x: hidden;
+  font-family: 'Leto', sans-serif;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='560' preserveAspectRatio='none' viewBox='0 0 1440 560'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1014%26quot%3b)' fill='none'%3e%3crect width='1440' height='560' x='0' y='0' fill='url(%23SvgjsLinearGradient1015)'%3e%3c/rect%3e%3crect width='196' height='196' clip-path='url(%26quot%3b%23SvgjsClipPath1016%26quot%3b)' x='335.02' y='15.34' fill='url(%23SvgjsPattern1017)' transform='rotate(186.7%2c 433.02%2c 113.34)'%3e%3c/rect%3e%3ccircle r='46.666666666666664' cx='1225.8' cy='511.02' stroke='%23e73635' stroke-width='2.98' stroke-dasharray='2%2c 2'%3e%3c/circle%3e%3crect width='138.2' height='138.2' clip-path='url(%26quot%3b%23SvgjsClipPath1018%26quot%3b)' x='959.16' y='387.33' fill='url(%23SvgjsPattern1019)' transform='rotate(2.18%2c 1028.26%2c 456.43)'%3e%3c/rect%3e%3ccircle r='85.52062239322277' cx='307.67' cy='58.67' fill='%23e73635'%3e%3c/circle%3e%3crect width='60' height='60' clip-path='url(%26quot%3b%23SvgjsClipPath1020%26quot%3b)' x='1261.2' y='216.57' fill='url(%23SvgjsPattern1021)' transform='rotate(102.8%2c 1291.2%2c 246.57)'%3e%3c/rect%3e%3cpath d='M1222.45 31.07L1217.57 42.91 1204.95 40.75 1200.07 52.59 1187.45 50.43 1182.57 62.27 1169.95 60.11' stroke='%23d3b714' stroke-width='2.82' stroke-dasharray='3%2c 3'%3e%3c/path%3e%3ccircle r='46.666666666666664' cx='713.7' cy='305.09' stroke='%23d3b714' stroke-width='1.67' stroke-dasharray='4%2c 4'%3e%3c/circle%3e%3ccircle r='46.666666666666664' cx='997.1' cy='498.68' fill='%23037b0b'%3e%3c/circle%3e%3cpath d='M97.28 240.4a5.6 5.6 0 1 0-9.95 5.14 5.6 5.6 0 1 0 9.95-5.14zM83.07 247.75a5.6 5.6 0 1 0-9.95 5.15 5.6 5.6 0 1 0 9.95-5.15zM68.86 255.1a5.6 5.6 0 1 0-9.95 5.15 5.6 5.6 0 1 0 9.95-5.15zM54.65 262.46a5.6 5.6 0 1 0-9.95 5.14 5.6 5.6 0 1 0 9.95-5.14zM118.34 211.48a5.6 5.6 0 1 0-9.94 5.15 5.6 5.6 0 1 0 9.94-5.15zM104.13 218.83a5.6 5.6 0 1 0-9.94 5.15 5.6 5.6 0 1 0 9.94-5.15zM89.92 226.19a5.6 5.6 0 1 0-9.94 5.14 5.6 5.6 0 1 0 9.94-5.14zM75.71 233.54a5.6 5.6 0 1 0-9.94 5.15 5.6 5.6 0 1 0 9.94-5.15zM139.41 182.56a5.6 5.6 0 1 0-9.95 5.15 5.6 5.6 0 1 0 9.95-5.15zM125.2 189.92a5.6 5.6 0 1 0-9.95 5.14 5.6 5.6 0 1 0 9.95-5.14zM110.99 197.27a5.6 5.6 0 1 0-9.95 5.15 5.6 5.6 0 1 0 9.95-5.15zM96.78 204.62a5.6 5.6 0 1 0-9.95 5.15 5.6 5.6 0 1 0 9.95-5.15z' fill='%23e73635'%3e%3c/path%3e%3crect width='86.8' height='86.8' clip-path='url(%26quot%3b%23SvgjsClipPath1022%26quot%3b)' x='486.42' y='-8.56' fill='url(%23SvgjsPattern1023)' transform='rotate(221.86%2c 529.82%2c 34.84)'%3e%3c/rect%3e%3crect width='156' height='156' clip-path='url(%26quot%3b%23SvgjsClipPath1024%26quot%3b)' x='294.43' y='179.07' fill='url(%23SvgjsPattern1025)' transform='rotate(83.18%2c 372.43%2c 257.07)'%3e%3c/rect%3e%3crect width='240' height='240' clip-path='url(%26quot%3b%23SvgjsClipPath1026%26quot%3b)' x='944.94' y='-43.79' fill='url(%23SvgjsPattern1027)' transform='rotate(8.27%2c 1064.94%2c 76.21)'%3e%3c/rect%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1014'%3e%3crect width='1440' height='560' fill='white'%3e%3c/rect%3e%3c/mask%3e%3clinearGradient x1='15.28%25' y1='-39.29%25' x2='84.72%25' y2='139.29%25' gradientUnits='userSpaceOnUse' id='SvgjsLinearGradient1015'%3e%3cstop stop-color='%230e2a47' offset='0'%3e%3c/stop%3e%3cstop stop-color='rgba(129%2c 232%2c 133%2c 1)' offset='1'%3e%3c/stop%3e%3c/linearGradient%3e%3cpattern x='0' y='0' width='14' height='14' patternUnits='userSpaceOnUse' id='SvgjsPattern1017'%3e%3cpath d='M7 1L7 13M1 7L13 7' stroke='%23d3b714' fill='none' stroke-width='3.3'%3e%3c/path%3e%3c/pattern%3e%3cclipPath id='SvgjsClipPath1016'%3e%3ccircle r='49' cx='433.02' cy='113.34'%3e%3c/circle%3e%3c/clipPath%3e%3cpattern x='0' y='0' width='138.2' height='13.82' patternUnits='userSpaceOnUse' id='SvgjsPattern1019'%3e%3crect width='138.2' height='6.91' x='0' y='0' fill='%23d3b714'%3e%3c/rect%3e%3crect width='138.2' height='6.91' x='0' y='6.91' fill='rgba(0%2c 0%2c 0%2c 0)'%3e%3c/rect%3e%3c/pattern%3e%3cclipPath id='SvgjsClipPath1018'%3e%3ccircle r='34.55' cx='1028.26' cy='456.43'%3e%3c/circle%3e%3c/clipPath%3e%3cpattern x='0' y='0' width='60' height='6' patternUnits='userSpaceOnUse' id='SvgjsPattern1021'%3e%3crect width='60' height='3' x='0' y='0' fill='%23037b0b'%3e%3c/rect%3e%3crect width='60' height='3' x='0' y='3' fill='rgba(0%2c 0%2c 0%2c 0)'%3e%3c/rect%3e%3c/pattern%3e%3cclipPath id='SvgjsClipPath1020'%3e%3ccircle r='15' cx='1291.2' cy='246.57'%3e%3c/circle%3e%3c/clipPath%3e%3cpattern x='0' y='0' width='6.2' height='6.2' patternUnits='userSpaceOnUse' id='SvgjsPattern1023'%3e%3cpath d='M0 6.2L3.1 0L6.2 6.2' stroke='%23e73635' fill='none'%3e%3c/path%3e%3c/pattern%3e%3cclipPath id='SvgjsClipPath1022'%3e%3ccircle r='21.7' cx='529.82' cy='34.84'%3e%3c/circle%3e%3c/clipPath%3e%3cpattern x='0' y='0' width='156' height='6' patternUnits='userSpaceOnUse' id='SvgjsPattern1025'%3e%3crect width='156' height='3' x='0' y='0' fill='%23e73635'%3e%3c/rect%3e%3crect width='156' height='3' x='0' y='3' fill='rgba(0%2c 0%2c 0%2c 0)'%3e%3c/rect%3e%3c/pattern%3e%3cclipPath id='SvgjsClipPath1024'%3e%3ccircle r='39' cx='372.43' cy='257.07'%3e%3c/circle%3e%3c/clipPath%3e%3cpattern x='0' y='0' width='240' height='6' patternUnits='userSpaceOnUse' id='SvgjsPattern1027'%3e%3crect width='240' height='3' x='0' y='0' fill='%23d3b714'%3e%3c/rect%3e%3crect width='240' height='3' x='0' y='3' fill='rgba(0%2c 0%2c 0%2c 0)'%3e%3c/rect%3e%3c/pattern%3e%3cclipPath id='SvgjsClipPath1026'%3e%3ccircle r='60' cx='1064.94' cy='76.21'%3e%3c/circle%3e%3c/clipPath%3e%3c/defs%3e%3c/svg%3e");  background-size: cover;
+  background-attachment: fixed;
 }
 
 header {
-  font-family: 'Leto', sans-serif;
   display: flex;
   justify-content: center;
   }
+
+  h1 {
+    color: #fff;
+    font-size: 2.5rem;
+    position: absolute;
+    left: 100px;
+  }
+ 
   
-  .menu-bar {
+  .menu-bar,h1 {
     border-radius: 25px;
     height: fit-content;
     display: inline-flex;
@@ -37,6 +47,7 @@ header {
       list-style: none;
       color: white;
       font-family: sans-serif;
+      font-size: 1.2rem;
       font-weight: bold;
       padding: 12px 16px;
       margin: 0 8px;
@@ -153,59 +164,204 @@ header {
 /* Main section */
 
 main {
-  font-family: 'Lato',sans-serif;
+  
   .cards-section {
-    padding: 150px 0;
+    padding: 150px 50px;
     display: grid;
     grid-template-columns: repeat(3, minmax(400px, 1fr));
     row-gap: 150px;
     justify-items: center;
     
     .card {
-      width: 400px;
+      width: 65%;
       display: flex;
       flex-direction: column;
+      
 
     .card-images {
       width: 100%;
-      // height: 400px;
       object-fit: cover;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
     }
 
     .content {
-      border: 1px solid black;
       border-top: none;
       border-bottom-left-radius: 10px;
       border-bottom-right-radius: 10px;
       padding: 20px;
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
+      height: 330px;
+      font-size: 1.1rem;
+      background: linear-gradient(rgb(0, 17, 17) 0%, rgb(25, 119, 106) 60%, rgb(97, 170, 166) , rgb(183, 224, 223));
+      
 
       .name-div {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        align-items: baseline;
+        
+        h2 {
+          width: 80%;
+          color: #f0f3f2;
+        }
+
+        span {
+          color: #f0f3f2;
+
+          i:hover {
+            cursor: pointer;
+          }
+        }
       }
 
-      .number-of-likes {
-        margin-left: auto;
-        margin-top: -20px;
-        margin-bottom: 20px;
+      .likes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .description {
+        color: rgb(225, 230, 228);
       }
 
       .comment {
-        margin-top: 20px;
         padding: 10px;
         font-size: 1.2rem;
         border-radius: 5px;
+        border: none;
+        background: transparent;
+        box-shadow: 0 10px 15px rgb(55, 148, 143);
+        color: #ffffff;
+        font-weight: 900;
 
         &:hover {
           cursor: pointer;
+          color: rgb(1, 41, 53);
+          box-shadow: 0 0 10px rgb(175, 233, 229);
         }
       }
     }
    }
   }
+}
+
+footer {
+  font-size: 1.5rem;
+  font-weight: 900;
+  color: #d2d1d3;
+  padding: 20px 100px;
+  background: rgb(38, 44, 42);
+  a {
+    text-decoration: none;
+    color: rgb(55, 148, 143);    
+  }
+}
+
+
+.popup {
+  width: 85vw;
+  height: 90vh;
+  padding: 30px 50px;
+  background-color: #2e3130;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  border-radius: 20px;
+  overflow-y: scroll;
+  color: #d2d1d3;
+
+  .exit {
+    background: transparent;
+    border: none;
+    align-self: flex-end;
+    font-size: 2rem;
+    color: #d2d1d3;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  img {
+    width: 80%;
+    border-radius: 20px;
+  }
+
+  h2 {
+    font-size: 2.8rem;
+  }
+
+  p {
+    font-size: 1.5rem;
+
+  }
+
+  h3 {
+    font-size: 1.6rem;
+  }
+
+  ul > li {
+    list-style: none;
+    font-style: italic;
+    font-size: 1.2rem;
+  }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 50%;
+
+    h4 {
+      font-size: 1.5rem;
+    }
+
+    input[type="text"], textarea {
+      width: 100%;
+      font-size: 1.2rem;
+      padding: 10px;
+      border-radius: 10px;
+      border: none;
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    textarea {
+      height: 150px;
+    }
+
+    input[type="button"] {
+      align-self: flex-start;
+      font-size: 1.3rem;
+      font-weight: 900;
+      border: none;
+      padding: 10px;
+      border-radius: 8px;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.blur {
+  filter: blur(5px);
 }
