--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -182,7 +182,9 @@ b-content {
 
 /* Main section */
 main {
-  background: url("../assets/images/Circuit Board (1).svg");
+  background: url("../assets/images/2754788.jpg");
+  background-position: center;
+  background-attachment: fixed;
 }
 
 main .cards-section {
@@ -429,7 +431,7 @@ footer a {
 }
 
 .blur {
-  -webkit-filter: blur(5px);
-          filter: blur(5px);
+  -webkit-filter: blur(15px);
+          filter: blur(15px);
 }
 /*# sourceMappingURL=style.css.map */
